points for clustering comparison

--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -309,6 +309,13 @@ Figure~\ref{fig:outliers} reports an analysis of the feature through the IQR met
     \label{fig:outliers}
 \end{figure}
 
+% \begin{wrapfigure}{r}{0.4\textwidth}
+%     \centering
+%     \captionsetup{justification=raggedleft, width=1\linewidth}
+%     \caption{Boxplot of the \texttt{runtimeMinutes} attribute for each \texttt{titleType}}
+%     \label{fig:runtimeMinutes_boxplot_no_type}
+%     \includegraphics[width=0.6\linewidth]{plots/outliers.png}
+% \end{wrapfigure}
 The boxplots show that there are samples that have been misreported, with runtimes of over 1000 minutes for \textit{tvSeries}.
 % the same can be observed on the second plot on the \textit{Has episodes} box plot.
 This might be because of an inconsistency with the understanding of the meaning of the attribute, and in those cases it might be possible that
